@@ -2,7 +2,7 @@ package com.inconcert.domain.chat.service;
 
 import com.inconcert.domain.chat.dto.ChatMessageDTO;
 import com.inconcert.domain.chat.dto.ChatRoomDTO;
-import com.inconcert.domain.chat.dto.UserDto;
+import com.inconcert.domain.chat.dto.UserDTO;
 import com.inconcert.domain.chat.entity.ChatMessage;
 import com.inconcert.domain.chat.entity.ChatNotification;
 import com.inconcert.domain.chat.entity.ChatRoom;
@@ -15,15 +15,14 @@ import com.inconcert.domain.user.repository.UserRepository;
 import com.inconcert.domain.user.service.UserService;
 import com.inconcert.global.exception.*;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
-import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,65 +33,48 @@ public class ChatService {
     private final UserRepository userRepository;
     private final UserService userService;
     private final ChatNotificationService chatNotificationService;
-
     private final SimpMessagingTemplate messagingTemplate;
-
-    @Transactional(readOnly = true)
-    public ChatRoom getChatRoomById(Long id) {
-        return chatRoomRepository.findById(id)
-                .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
-    }
 
     // 사용자의 채팅방 목록
     @Transactional(readOnly = true)
-    public List<ChatRoomDTO> getChatRoomDtosByUserId() {
+    public List<ChatRoomDTO> getChatRoomDTOsByUserId() {
         User user = userService.getAuthenticatedUser()
                 .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
 
-        List<ChatRoom> chatRooms = chatRoomRepository.findAllByUserId(user.getId());
-
-        return chatRooms.stream()
-                .map(this::convertToChatRoomDTO)
-                .collect(Collectors.toList());
+        // 네이티브 쿼리에서 DTO를 생성해서 담아주지 못하기 때문에, List<Map<String, Object>>로 반환받음
+        // 그 후 각각 타입변환하고, null처리까지 한 후 List<ChatRoomDTO>로 반환
+        return chatRoomRepository.getChatRoomDTOsByUserId(user.getId()).stream()
+                .map(chatRoomDTOS -> ChatRoomDTO.builder()
+                        .id((Long) chatRoomDTOS.get("chatRoomId"))
+                        .roomName((String) chatRoomDTOS.get("roomName"))
+                        .hostUserId((Long) chatRoomDTOS.get("hostUserId"))
+                        .userCount(((Long) chatRoomDTOS.get("userCount")).intValue())
+                        .timeSince(chatRoomDTOS.get("timeSince") != null ? (String) chatRoomDTOS.get("timeSince") : null)
+                        .diffTime(chatRoomDTOS.get("diffTime") != null ? ((Long) chatRoomDTOS.get("diffTime")).intValue() : 0)
+                        .build())
+                .toList();
     }
 
     // 특정 채팅방 조회
     @Transactional(readOnly = true)
-    public ChatRoomDTO getChatRoomDto(Long chatRoomId) {
-        ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
-                .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
-
-        return ChatRoomDTO.builder()
-                .id(chatRoom.getId())
-                .roomName(chatRoom.getRoomName())
-                .hostUserId(chatRoom.getHostUser().getId())
-                .userCount(chatRoom.getUsers().size())
-                .build();
+    public ChatRoomDTO getChatRoomDTOByChatRoomId(Long chatRoomId) {
+        return chatRoomRepository.getChatRoomDTOById(chatRoomId);
     }
 
     // 채팅방에 속한 유저 목록
     @Transactional(readOnly = true)
-    public List<UserDto> getUsersInChatRoom(Long chatRoomId) {
-        List<User> users = chatRoomRepository.findAllById(chatRoomId);
-        // 유저 목록을 UserDto로 변환
-        return users.stream()
-                .map(UserDto::from)
-                .collect(Collectors.toList());
+    public List<UserDTO> getUserDTOsByChatRoomId(Long chatRoomId) {
+        return chatRoomRepository.findAllById(chatRoomId);
     }
 
     // 유저가 채팅방에 있는지 확인하는 메소드
     @Transactional(readOnly = true)
     public boolean isExistUser(Long chatRoomId) {
-        User loggedInUser = userService.getAuthenticatedUser()
+        User user = userService.getAuthenticatedUser()
                 .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
 
-        List<UserDto> usersInChatRoom = getUsersInChatRoom(chatRoomId);  // 채팅방 유저 목록 가져오기
-        for (UserDto userDto : usersInChatRoom) {
-            if (userDto.getId().equals(loggedInUser.getId())) {
-                return true;  // 사용자가 채팅방에 있음
-            }
-        }
-        return false;  // 사용자가 채팅방에 없음
+        return getUserDTOsByChatRoomId(chatRoomId).stream()
+                .anyMatch(userDto -> userDto.getId().equals(user.getId()));
     }
 
     // 채팅방 생성
@@ -104,10 +86,9 @@ public class ChatService {
         ChatRoom chatRoom = ChatRoom.builder()
                 .roomName(roomName)
                 .hostUser(user)
-                .users(new ArrayList<>())
+                .users(Arrays.asList(user))
                 .build();
 
-        chatRoom.addUser(user);
         chatRoom = chatRoomRepository.save(chatRoom);
 
         return ChatRoomDTO.builder()
@@ -120,45 +101,37 @@ public class ChatService {
 
     // 동행 요청 Host에게 전송
     @Transactional
-    public void requestJoinChatRoom(Long chatRoomId, User requestingUser) {
+    public ResponseEntity<String> requestJoinChatRoom(Long chatRoomId) {
+        User requestingUser = userService.getAuthenticatedUser()
+                .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
-
         Post post = chatRoom.getPost();
 
         // 이미 채팅방에 사용자가 속해 있는 경우
         if (chatRoom.getUsers().contains(requestingUser)) {
-            throw new AlreadyInChatRoomException(ExceptionMessage.ALREADY_IN_CHATROOM.getMessage());
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(ExceptionMessage.ALREADY_IN_CHATROOM.getMessage());
         }
-
         // 현재 인원이 matchCount와 일치하거나 초과하는지 확인
         if (chatRoom.getUsers().size() >= post.getMatchCount()) {
-            throw new AlreadyFullChatRoomException(ExceptionMessage.ALREADY_FULL_CHATROOM.getMessage());
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ExceptionMessage.ALREADY_FULL_CHATROOM.getMessage());
+        }
+        // 이미 신청한 경우
+        if(chatNotificationRepository.existsByRequestUserAndChatRoom(requestingUser, chatRoom)) {
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(ExceptionMessage.ALREADY_APPLIED_TO_CHATROOM.getMessage());
         }
 
         User hostUser = chatRoom.getHostUser();
 
-        // 이미 신청한 경우
-        if(chatNotificationRepository.existsByRequestUserAndChatRoom(requestingUser, chatRoom)) {
-            throw new AlreadyAppliedToChatRoomException(ExceptionMessage.ALREADY_APPLIED_TO_CHATROOM.getMessage());
-        }
-
-        // DB에 저장
-        ChatNotification chatNotificationEntity = ChatNotification.builder()
-                .message(requestingUser.getNickname() + "님이 채팅방 입장을 요청하였습니다.")
-                .chatRoom(chatRoom)
-                .user(hostUser)
-                .requestUser(requestingUser)
-                .build();
-        chatNotificationRepository.save(chatNotificationEntity);
-
         // 알림 전송
         chatNotificationService.sendJoinRequestNotification(hostUser, chatRoom, requestingUser);
+
+        return ResponseEntity.ok("요청을 성공적으로 전송하였습니다.");
     }
 
     // 입장 승인
     @Transactional
-    public void approveJoinRequest(Long chatRoomId, Long notificationId) {
+    public ResponseEntity<String> approveJoinRequest(Long chatRoomId, Long notificationId) {
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
 
@@ -172,52 +145,57 @@ public class ChatService {
             chatRoom.addUser(requestUser);
             chatRoomRepository.save(chatRoom);
 
-            // 입장 메시지 최초 전송
-            ChatMessageDTO enterMessage = ChatMessageDTO.builder()
-                    .chatRoomId(chatRoomId)
-                    .username(requestUser.getUsername())
-                    .nickname(requestUser.getNickname())
-                    .message(requestUser.getNickname() + "님이 입장하셨습니다.")
-                    .type(ChatMessageDTO.MessageType.ENTER)
-                    .isNotice(true)
-                    .build();
+            // 1대1 채팅이 아닌 경우에만 입장 메시지 전송
+            if(chatRoom.getPost() != null){
+                ChatMessageDTO enterMessage = ChatMessageDTO.builder()
+                        .chatRoomId(chatRoomId)
+                        .username(requestUser.getUsername())
+                        .nickname(requestUser.getNickname())
+                        .message(requestUser.getNickname() + "님이 입장하셨습니다.")
+                        .type(ChatMessageDTO.MessageType.ENTER)
+                        .isNotice(true)
+                        .build();
 
-            ChatMessage saveMessage = ChatMessage.builder()
-                    .chatRoom(chatRoom)
-                    .sender(requestUser)
-                    .message(enterMessage.getMessage())
-                    .isNotice(true)
-                    .build();
+                ChatMessage saveMessage = ChatMessage.builder()
+                        .chatRoom(chatRoom)
+                        .sender(requestUser)
+                        .message(enterMessage.getMessage())
+                        .isNotice(true)
+                        .build();
 
-            messagingTemplate.convertAndSend("/topic/chat/room/" + chatRoomId, enterMessage);
-            chatMessageRepository.save(saveMessage);
-
+                messagingTemplate.convertAndSend("/topic/chat/room/" + chatRoomId, enterMessage);
+                chatMessageRepository.save(saveMessage);
+            }
         }
 
         // 사용자에게 채팅방 입장이 승인되었음을 알림
         chatNotificationService.sendJoinApprovalNotification(requestUser, chatRoom, notificationId);
+
+        return ResponseEntity.ok("승인이 완료되었습니다.");
     }
 
     // 사용자가 채팅방에서 퇴장할 때 처리
     @Transactional
-    public void leaveChatRoom(Long chatRoomId, User leavingUser) {
+    public ResponseEntity<String> leaveChatRoom(Long chatRoomId) {
+        User leavingUser = userService.getAuthenticatedUser()
+                .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
 
-        if (chatRoom.getUsers().contains(leavingUser)) {
-            // host는 2명 이상일 때 나갈 수 없음
-            if(chatRoom.getHostUser().equals(leavingUser) && chatRoom.getUsers().size() >= 2 && chatRoom.getPost() != null) {
-                throw new HostExitException(ExceptionMessage.HOST_EXIT.getMessage());
-            }
-            chatRoom.removeUser(leavingUser);   // 2명 이상일 때 host가 아니면 퇴장
+        // host는 2명 이상일 때 나갈 수 없음
+        if(chatRoom.getPost() != null && chatRoom.getHostUser().equals(leavingUser) && chatRoom.getUsers().size() >= 2) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ExceptionMessage.HOST_EXIT.getMessage());
+        }
+        chatRoom.removeUser(leavingUser);   // host가 아니거나, host가 채팅방에 혼자 있는 경우
 
-            // 채팅방 인원이 0명일 경우 post와 채팅방 삭제
-            if (chatRoom.getUsers().isEmpty()) {
-                chatRoomRepository.deleteById(chatRoomId);
-            }
-            else {
+        // 채팅방 인원이 0명일 경우 post와 채팅방 삭제
+        if (chatRoom.getUsers().isEmpty()) {
+            chatRoomRepository.deleteById(chatRoomId);
+        }
+        else {
+            // 1대1 채팅방이 아닌 채팅방에서 나간 경우 퇴장 메시지 전송
+            if(chatRoom.getPost() != null) {
                 chatRoomRepository.save(chatRoom);
-                // 완전히 나간 경우 퇴장 메시지 전송
                 ChatMessageDTO leaveMessage = ChatMessageDTO.builder()
                         .chatRoomId(chatRoomId)
                         .username(leavingUser.getUsername())
@@ -238,14 +216,12 @@ public class ChatService {
                 messagingTemplate.convertAndSend("/topic/chat/room/" + chatRoomId, leaveMessage);
             }
         }
-        else {
-            throw new AlreadyOutOfChatRoomException("채팅방에 속해 있지 않습니다.");
-        }
+        return ResponseEntity.ok("채팅방을 나갔습니다.");
     }
 
     // 강퇴
     @Transactional
-    public void kickUserFromChatRoom(Long chatRoomId, Long kickedUserId) {
+    public ResponseEntity<String> kickUserFromChatRoom(Long chatRoomId, Long kickedUserId) {
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
         User kickedUser = userRepository.findById(kickedUserId)
@@ -253,7 +229,7 @@ public class ChatService {
 
         // 호스트가 아니면 강퇴할 수 없음
         if (!chatRoom.getHostUser().getUsername().equals((userService.getAuthenticatedUser().get().getUsername()))) {
-            throw new KickException("호스트만 강퇴할 수 있습니다.");
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ExceptionMessage.KICK_NOT_ALLOWED.getMessage());
         }
 
         // 완전히 나간 경우 퇴장 메시지 전송
@@ -272,18 +248,21 @@ public class ChatService {
                 .message(kickedMessage.getMessage())
                 .isNotice(true)
                 .build();
+        chatMessageRepository.save(saveMessage);
 
         messagingTemplate.convertAndSend("/topic/chat/room/" + chatRoomId, kickedMessage);
-        chatMessageRepository.save(saveMessage);
+        messagingTemplate.convertAndSend("/topic/chat/kicked/" + kickedUserId, "채팅방에서 강퇴되었습니다.");
 
         // 유저 강퇴
         chatRoom.removeUser(kickedUser);
         chatRoomRepository.save(chatRoom);
+
+        return ResponseEntity.ok("유저가 강퇴되었습니다.");
     }
 
     // 요청 거절
     @Transactional
-    public void rejectJoinRequest(Long chatRoomId, Long notificationId) {
+    public ResponseEntity<String> rejectJoinRequest(Long chatRoomId, Long notificationId) {
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
 
@@ -294,41 +273,44 @@ public class ChatService {
 
         // 요청자에게 거절 알림 전송
         chatNotificationService.sendJoinRejectionNotification(requestUser, chatRoom, notificationId);
+
+        return ResponseEntity.ok("\"" + chatRoom.getRoomName() + "\" 채팅방의 요청이 거절되었습니다.");
     }
 
 
     // 채팅방 메시지 가져오기
     @Transactional(readOnly = true)
-    public List<ChatMessageDTO> getMessageDtosByChatRoom(Long chatRoomId) {
+    public List<ChatMessageDTO> getChatMessageDTOsByChatRoomId(Long chatRoomId) {
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
-        List<ChatMessage> messages = chatMessageRepository.findByChatRoom(chatRoom);
-        return messages.stream()
-                .map(this::convertToChatMessageDTO)
-                .collect(Collectors.toList());
+        return chatMessageRepository.findByChatRoom(chatRoom.getId());
     }
 
     // 메시지 전송
     @Transactional
-    public void sendMessage(Long chatRoomId, String sendername, String message) {
-        User user = userRepository.findByUsername(sendername)
+    public void sendMessage(ChatMessageDTO message) {
+        User user = userRepository.findByUsername(message.getUsername())
                 .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
-        ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
+        ChatRoom chatRoom = chatRoomRepository.findById(message.getChatRoomId())
                 .orElseThrow(() -> new ChatNotFoundException(ExceptionMessage.CHAT_NOT_FOUND.getMessage()));
 
         ChatMessage chatMessage = ChatMessage.builder()
                 .chatRoom(chatRoom)
                 .sender(user)
-                .message(message)
+                .message(message.getMessage())
                 .isNotice(false)
                 .build();
+
+        message.setType(ChatMessageDTO.MessageType.CHAT);
+        // 메시지를 해당 채팅방의 모든 사용자에게 전송
+        messagingTemplate.convertAndSend("/topic/chat/room/" + message.getChatRoomId(), message);
 
         chatMessageRepository.save(chatMessage);
     }
 
     // 1:1 채팅방 생성
     @Transactional
-    public ChatRoom createOneToOneChatRoom(Long receiverId) {
+    public ResponseEntity<?> createOneToOneChatRoom(Long receiverId) {
         User requestingUser = userService.getAuthenticatedUser()
                 .orElseThrow(() -> new UserNotFoundException(ExceptionMessage.USER_NOT_FOUND.getMessage()));
         User receiver = userRepository.findById(receiverId)
@@ -338,82 +320,19 @@ public class ChatService {
         List<ChatRoom> existingRooms = chatRoomRepository.findByUsersContainsAndUsersContainsAndPostIsNull(requestingUser, receiver);
 
         if (!existingRooms.isEmpty()) {
-            throw new AlreadyInChatRoomException(ExceptionMessage.ALREADY_IN_CHATROOM.getMessage());
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(ExceptionMessage.ALREADY_IN_CHATROOM.getMessage());
         } else if(receiverId.equals(requestingUser.getId())) {
-            throw new SelfChatException(ExceptionMessage.SELF_CHAT.getMessage());
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ExceptionMessage.SELF_CHAT.getMessage());
         }
 
         // 채팅방 생성
         ChatRoom chatRoom = ChatRoom.builder()
                 .roomName("1:1 채팅: " + requestingUser.getNickname() + ", " + receiver.getNickname())
-                .hostUser(requestingUser)
                 .build();
 
         chatRoom.addUser(requestingUser); // 요청자 추가
         chatRoom.addUser(receiver); // 수신자 추가
 
-        return chatRoomRepository.save(chatRoom);
-    }
-
-    private ChatRoomDTO convertToChatRoomDTO(ChatRoom chatRoom) {
-        List<String> messageTime = getMessageTime(chatRoom);
-
-        return ChatRoomDTO.builder()
-                .id(chatRoom.getId())
-                .roomName(chatRoom.getRoomName())
-                .hostUserId(chatRoom.getHostUser().getId())
-                .userCount(chatRoom.getUsers().size())
-                .timeSince(messageTime != null ? messageTime.get(0) : "empty")
-                .diffTime(messageTime != null ? Integer.parseInt(messageTime.get(1)) : 0)
-                .build();
-    }
-
-    private static List<String> getMessageTime(ChatRoom chatRoom) {
-        if(chatRoom.getMessages().isEmpty())    return null;
-
-        LocalDateTime dateTime = chatRoom.getMessages().get(chatRoom.getMessages().size()-1).getCreatedAt().truncatedTo(ChronoUnit.MINUTES);
-        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES);
-
-        String timeSince = "";
-        int diffTime = 0;
-
-        // dateTime 값이 현재 시각과 정확히 일치하는 경우
-        if (dateTime.isEqual(now)) {
-            timeSince = "now";
-        }
-        // dateTime 값이 현재 날짜보다 하루 이상 전인 경우
-        else if (dateTime.toLocalDate().isBefore(now.toLocalDate())) {
-            diffTime = (int) ChronoUnit.DAYS.between(dateTime.toLocalDate(), now.toLocalDate());
-            timeSince = "day";
-        }
-        // dateTime 값이 현재 시간보다 1~24시간 후인 경우
-        else if (dateTime.isAfter(now) && dateTime.isBefore(now.plusDays(1)) && dateTime.minusHours(1).isBefore(now)) {
-            diffTime = (int) ChronoUnit.HOURS.between(now, dateTime);
-            timeSince = "hour";
-        }
-        // dateTime 값이 현재 시간보다 1시간 이내인 경우
-        else if (dateTime.isBefore(now) && dateTime.isAfter(now.minusHours(1))) {
-            diffTime = (int) ChronoUnit.MINUTES.between(dateTime, now);
-            timeSince = "minute";
-        }
-
-        List<String> result = new ArrayList<>();
-        result.add(timeSince);
-        result.add(String.valueOf(diffTime));
-        return result;
-    }
-
-    private ChatMessageDTO convertToChatMessageDTO(ChatMessage chatMessage) {
-        return ChatMessageDTO.builder()
-                .id(chatMessage.getId())
-                .chatRoomId(chatMessage.getChatRoom().getId())
-                .username(chatMessage.getSender().getUsername())
-                .nickname(chatMessage.getSender().getNickname())
-                .message(chatMessage.getMessage())
-                .createdAt(chatMessage.getCreatedAt())
-                .type(ChatMessageDTO.MessageType.CHAT)
-                .profileImage(chatMessage.getSender().getProfileImage())
-                .isNotice(chatMessage.isNotice())
-                .build();
+        return ResponseEntity.ok(chatRoomRepository.save(chatRoom).getId());
     }
 }
